Some edits to the video editor, added some editing functions using ffmpeg and was able to create a toggle affect for some of the editing options talked about in my html files

--- a/WebApp/templates/editor.html
+++ b/WebApp/templates/editor.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <title>Welcome to The editing page</title>
 </head>
+<style>
+    .hidden{
+        display: none;
+    }
+</style>
 <body>
 <div style="text-align: center">
 <h2>Now here is where the fun begins, select from the options below to describe how you would like to edit your video</h2>
+<p> Please select an option from the options list for what kind of edits you will like done to your video</p>
+   <form>
+  <input type="checkbox" id="option1" name="option1" value="audio">
+  <label for="option1"> <b>I would like to remove the audio</b></label><br>
+  <input type="checkbox" id="option2" name="option2" value="speed">
+  <label for="option2"> <b>I would like to change the speed</b></label><br>
+  <input type="checkbox" id="option3" name="option3" value="brightness">
+  <label for="option3"> <b>I would like to change the brightness</b></label>
+   </form>
+
+   <form>
+  <label for="speed_change">Speed Change(Please enter a number between 0.5 and 2.0):</label><br>
+  <input type="number" id="speed_change" class="hidden" name="speed_change" min="0.5" max="2.0"><br>
+  <label for="brightness_change">Brightness Change(Please enter a number between -1.0 and 1.0):label><br>
+  <input type="number" id="brightness_change" class="hidden" name="brightness_change" min="-1.0" max="1.0">
+    </form>
+
+    <script>
+    document.getElementById("option2").addEventListener("change", function () {
+        let speedInput = document.getElementById("speed_change");
+        speedInput.classList.toggle("hidden", !this.checked); // Show when checked, hide when unchecked
+    });
+
+    document.getElementById("option3").addEventListener("change", function () {
+        let brightnessInput = document.getElementById("brightness_change");
+        brightnessInput.classList.toggle("hidden", !this.checked);
+    });
+</script>
+
 </div>
 
 </body>
