Update, we have made some very great progress. We were able to finally connect to the python functions from the html forms via json request and have successfully had the output files edited and returned back to us. Now I just need to do some formating for one of the buttons and then finish the final html file called "product" which will display the edited video and allow a person to download it.

--- a/WebApp/templates/editor.html
+++ b/WebApp/templates/editor.html
@@ -7,7 +7,8 @@
         .hide {
             display: none;
         }
-        .slide{
+        .slide {
+            position: fixed;
             bottom: 40px;
             right: 100px;
         }
@@ -107,6 +108,7 @@
         }
 
         // After processing, show the button to continue
+
         let buttonPress = document.getElementById("moving");
         buttonPress.classList.remove("hide"); // Make the button visible
     }
@@ -123,7 +125,7 @@
         let speedValue = document.getElementById("speed_change").value;
         let brightnessValue = document.getElementById("brightness_change").value;
 
-        if(selectedOptions.includes("option1")){
+        if (selectedOptions.includes("option1")) {
             fetch("http://127.0.0.1:5000/change_audio_api", {
                 method: "POST",
                 headers: {
@@ -158,7 +160,7 @@
             .then(response => response.json())
             .then(data => {
                 document.getElementById("result").innerText = "Output Video: " + data.output_video;
-                file = data.output_video
+                file = data.output_video;
                 alert("Video has been successfully edited, thank you!");
             })
             .catch(error => alert("Error:", error));
@@ -179,7 +181,7 @@
             .then(response => response.json())
             .then(data => {
                 document.getElementById("result").innerText = "Brightness adjusted. Output Video: " + data.output_video;
-                file = data.output_video
+                file = data.output_video;
                 alert("Video brightness has been successfully adjusted.");
             })
             .catch(error => alert("Error:", error));
@@ -189,7 +191,7 @@
     }
 
     // Navigation function
-    function navigate(){
+    function navigate() {
         window.location.href = "product.html"; // Redirect to another page
     }
 </script>
