--- a/WebApp/templates/editor.html
+++ b/WebApp/templates/editor.html
@@ -71,8 +71,9 @@
 
         <button type="button" id="Submission" onclick="receive()">Submit Changes</button>
     </form>
-
-    <button type="button" id="moving" onclick="navigate()" class="hide slide">Press to continue</button>
+    <a href="http://127.0.0.1:5000/product">
+    <button type="button" id="moving" class="hide slide">Press to continue</button>
+    </a>
 
     <div id="result"></div> <!-- Add this to display the result -->
 
@@ -97,6 +98,10 @@
     // Show "Press to continue" button once the form is submitted (or based on a condition)
     function receive() {
         var savedFile = localStorage.getItem("uploadedFile");
+        file = request.files['file']
+        file_path = f"uploads/{file.filename}"
+        file.save(file_path)
+
         if (savedFile) {
             console.log("Retrieved file:", savedFile);
             alert("Retrieved file: " + savedFile);
@@ -184,13 +189,8 @@
             })
             .catch(error => alert("Error:", error));
         }
-
-        localStorage.setItem("uploadedFile", file);
-    }
-
-    // Navigation function
-    function navigate(){
-        window.location.href = "product.html"; // Redirect to another page
+        localStorage.clear();
+        localStorage.setItem("uploadFile", file);
     }
 </script>
 </body>
