--- a/WebApp/WebApp2/templates/base.html
+++ b/WebApp/WebApp2/templates/base.html
@@ -42,10 +42,19 @@
         input[type="file"] {
             margin: 20px 0;
         }
+        contain {
+            max-width: 1200px;
+            margin: 0 auto; /* center horizontally */
+            padding: 0 20px;
+        }
 </style>
 <body>
     <h1>Miracle's Website</h1>
     {% block content %}
     {% endblock %}
+    <div class = "contain">
+        {% block box %}
+        {% endblock %}
+    </div>
 </body>
 </html>
