--- a/WebApp/WebApp2/templates/user.html
+++ b/WebApp/WebApp2/templates/user.html
@@ -8,6 +8,12 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
+{% block box %}
+<form action = "#" method = "POST">
+    <input type = "email" name = "email" placeholder="Enter email" value="{{email if email}}">
+    <input type = "submit" value = "submit">
+</form>
+{% endblock %}
 <a>Welcome {{text}}</a>
 <a href="http://127.0.0.1:5000/logout">
     <button type = "button">Log out</button>
