--- a/WebApp/WebApp2/templates/create.html
+++ b/WebApp/WebApp2/templates/create.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Login Page {% endblock %}
+{% block title %} Create User Page {% endblock %}
 
 {% block content %}
     {% with messages = get_flashed_messages() %}
@@ -9,18 +9,17 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
-<h2>Enter in your username and password or select <b>create and account</b> to make a new account</h2>
-<p> </p>
-{% if one %}
-    <script>
-    alert("This account does not exist, please enter a valid account or create an account");
-    </script>
-{% endif %}
+
+<h2>Enter your account details to make a new account</h2>
 <form action="#" method = "post">
     <p>User Name: </p>
     <p><input type = "text" name="nm"></p>
-    <p>Password</p>
+    <p>Password: </p>
     <p><input type="text" name="ps"></p>
+    <p>Email: </p>
+    <p><input type = "text" name = "em"></p>
+    <p>Age: </p>
+    <p><input type = "number" name = "ag"></p>
     <p><input type="submit" value="submit"></p>
 </form>
 {% endblock %}
