--- a/WebApp/WebApp2/templates/login.html
+++ b/WebApp/WebApp2/templates/login.html
@@ -23,4 +23,8 @@
     <p><input type="text" name="ps"></p>
     <p><input type="submit" value="submit"></p>
 </form>
+
+<a href="http://127.0.0.1:5000/create">
+    <button type="button"> Create Account</button>
+</a>
 {% endblock %}
