We have added an image component to our database and are also going to create a details html page that brings up the details of a user

--- a/WebApp/WebApp2/templates/create.html
+++ b/WebApp/WebApp2/templates/create.html
@@ -20,6 +20,8 @@
     <p><input type = "text" name = "em"></p>
     <p>Age: </p>
     <p><input type = "number" name = "ag"></p>
+    <p>Profile Picture: </p>
+    <p><input type ="file" name="png" accept ="image/*" required></p>
     <p><input type="submit" value="submit"></p>
 </form>
 {% endblock %}
