--- a/WebApp/WebApp2/templates/details.html
+++ b/WebApp/WebApp2/templates/details.html
@@ -3,6 +3,8 @@
 
 {% block content %}
 <img src={{photo}} alt="Your Profile Picture"class="pic">
+<p>Your Email: {{zone}}</p>
+<p>Your Age: {{num}}</p>
 
 
 {% endblock %}
