--- a/WebApp/WebApp2/templates/user.html
+++ b/WebApp/WebApp2/templates/user.html
@@ -16,4 +16,7 @@
 <a href="http://127.0.0.1:5000/logout">
     <button type = "button">Log out</button>
 </a>
+<a href="http://127.0.0.1:5000/details">
+    <button type = "button">Check Details</button>
+</a>
 {% endblock %}
