--- a/WebArt/templates/home.html
+++ b/WebArt/templates/home.html
@@ -53,8 +53,6 @@
         font-weight: 600;
     }
 </style>
-
-    </style>
     <meta charset="UTF-8">
     <title>Home Page</title>
 </head>
@@ -95,12 +93,15 @@
 </a></th>
         </tr>
         <tr>
-            <td><a href="/Users/home/PycharmProjects/Pycharm Projects/Code Play/WebApp/templates/retro.html">
+            <td><a href="http://127.0.0.1:5000/Immanuel">
     <img src="static/Immanuel.png" alt="Immanuel" width="150">
 </a></td>
-            <td><a href="/Users/home/PycharmProjects/Pycharm Projects/Code Play/WebApp/templates/Village_Hero.html"><img
+            <td><a href="http://127.0.0.1:5000/villageHero">
+                <img src="static/Village Hero.png" alt="Village Hero" width="150">
             </a></td>
-            <td>W3 schools</td>
+            <td><a href="http://127.0.0.1:5000/EmbraceOfNature">
+                <img src="static/Embrace of Nature.png" alt="Embrace Of Nature" width="150">
+            </a></td>
         </tr>
     </table>
 </body>
