--- a/WebArt/templates/pumpitUp.html
+++ b/WebArt/templates/pumpitUp.html
@@ -1,11 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <div> </div>
-<a href = "http://127.0.0.1:5000"><img src="static/RETURN-removebg-preview.png" alt="Return" width="100"> </a>
+{% extends "base.html" %}
+{% block title %} Pump It Up {% endblock %}
+{% block content %}
+<body style="background-color:blue">
+<div style ="text-align: center">
+<h2 style="background-color: powderblue"><i>Pump It Up</i></h2>
+</div>
+<div style="text-align: center">
+    <video width="450" controls> <source src="static/Pump It Up.mp4" type="video/mp4">
+      </video>
+</div>
+<h3><u>What is Pump It Up</u></h3>
+<div style="text-align: center">
+    <p><b>This artwork is a piece that I made with the intent of providing a vibrant and party like vibe. It kind of is like teh school party events or
+    community events you wen to where they might have glow sticks and people just dancing. This was the kind of vibe that I was going for and wanted
+    to put in a boombox dj to really emphasizes the music take over nad just make the vibes that more surreal. I added a lot of lights in order
+    to make the artwork seem that more electric and make the vibes that electric as well. I wanted to make it like as if a person could feel
+    like they are in there as well and its just suppose to overall produce a party and vibrant culture </b></p>
+</div>
+<h3><u>What was the inspiration</u></h3>
+<div style="text-align: center">
+    <p><b> There were actually a couple inspirations that contributed to teh creation of this piece of art. For starters, the beat that
+    I made to this was actually based off or made based off of one of those reel beats that I have heard. I liked how it sounded and tried
+    to create something similar but with my own spin off. Then the thoughts of a party and the DJ events that I have been at start to flow into
+    my head, and I was like "Lets do it". It gave a very upbeat and electric thought in my head. But not, for the boom box, I got inspiration
+    from a kids show called the amazing world of gumball. I used to watch that show a lot of growing up and the boom box character named juke
+    was meant to be a human character with a boom box for a head and I thought that would be perfect for a DJ party event. And with that, the
+    art wok PUMP IT UP was born &#128516;</b></p>
+</div>
+<h3><u>How Long did it take</u></h3>
+<div style="text-align: center">
+    <p><b>This image probably took like two or three weeks to finish, I don't really remember exactly the length of time that it took.
+    I do however remember that I spent some time with lining up the boom box with the body to ensure that it looked like a living boom box
+    without the body seeming to unorthodox. I was trying to just kind of match the boom box character in the amazing world of gumball to be honest.
+    I also do remember the turntable taking a while to create as well. The detail and constant having to group and ungroup shapes was a little
+    tedious, but we finally made it and got it done. #We did it &#128558;&#8205;&#128168; </b></p>
+</div>
 </body>
-</html>
+{% endblock %}
